--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,8 @@ azure-storage-blob
 fitz
 azure-cosmos
 gremlinpython
-azure.ai.formrecognizer
+azure-ai-formrecognizer
 openai
-azure.core.credentials
-azure.cosmos
+azure-core
+azure-cosmos
+azure-search-documents
